# FilesHousing

./: .gitignore  FRONTEND.md  fileshousing_brief.md  index.html  package.json  tsconfig.json
.aloop/: PLAN.md  STATE.md
.aloop/prompts/: B1.md  B2.md  B3.md  B4.md  B5.md  V1.md  engine-tauri.md
.aloop/reviews/: B1.md  B2.md  B3.md  B4.md  engine-tauri-wip.patch
.claude/: launch.json
src/: backend.ts  city.ts  layout.ts  main.ts  mockData.ts  renderer.ts  state.ts  styles.css  treemap.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  scanner.rs
